--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 <body>
 
-    <form method="POST" action="valid.php">
-        <input type="text" id="barcode" name="barcode">
+    <form method="get" action="valid.php">
+        <input type="text" name="barcode">
+        <!--<input type="text" id="barcode" name="barcode">-->
     </form>
    
 
