--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <form method="get" action="valid.php">
+    <form  method="get" action="valid.php" >
         <input type="text" name="barcode">
         <!--<input type="text" id="barcode" name="barcode">-->
     </form>
@@ -32,7 +32,7 @@
     <video id="video" width="240" height="320" autoplay></video>
 
 
-<link rel="stylesheet" href="colours\green.css">
+<link rel="stylesheet" href="colours\red.css">
  <h> Heading</h>
  <p>edit</p>
  
