alert for check

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <p id="demo"> ppp</p>
 
-    <form  method="get" onsubmit="getURL()">
+    <form  name="codeInput" method="get" onsubmit="getURL()">
         <input type="text" name="barcode" id="barcode">
         <!--<input type="text" id="barcode" name="barcode">-->
     </form>
