--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <link id="demo"> </link>
 
-    <form  name="codeInput" method="post" target="_self" onchange="getURL()">
+    <form  name="codeInput" method="post"  onchange="getURL()">
         <input type="text" name="barcode" id="barcode">
     </form>
 
