--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
 <body>
 
-    <img src="image/GV LOGO.jpg" alt="Global Village Business logo">
+    <img src="image/GV LOGO.jpg" alt="Global Village Business logo" style="width:250px;height:100px;">
+
+    <br><br>
 
     <!-- input code and activate function on input-->
-    <input type="text" name="barcode" id="barcode"  oninput="getURL()">
+    <input type="text" name="barcode" id="barcode"  oninput="getURL()" style="padding-left: 4.3%;">
 
  
 </body>
