--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <!-- Title of Webpage-->
     <title>Validity</title>
 
+    <!-- icon image-->
+    <link rel="icon" type="image/GV LOGO.jpg" href="favicon.ico">
+
+    <!-- function where the codes are located and
+    changes background colour-->
     <script src="functions.js"></script>
     
     <!-- Background colour reference-->
@@ -16,8 +21,10 @@
 
 <body>
 
+    <!-- Image of Business logo-->
     <img src="image/GV LOGO.jpg" alt="Global Village Business logo" style="width:250px;height:100px;">
 
+    <!---Created space -->
     <br><br>
 
     <!-- input code and activate function on input-->
