--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Validity</title>
 
     <!-- icon image-->
-    <link rel="icon" type="image/GV LOGO.jpg" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="image/GV LOGO.jpg">
 
     <!-- function where the codes are located and
     changes background colour-->
